# play_chess

./: .gitignore  README.md  pyproject.toml
chess/: __init__.py  chess_engine.py  chess_main.py  game_state.py  move.py  smart_move_finder.py
