[tool.poetry]
name = "play-chess"
version = "0.1.0"
description = "Ready to play chess with docker"
authors = ["Abdur-Rahim-sheikh <abi.rahim.sheikh@gmail.com>"]
readme = "README.md"
packages = [{include = "chess"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
pygame = "^2.5.2"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
